fixed profile thing i think! its not responsive though...?

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -479,10 +479,26 @@ float: right;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+.containerpt{
+    width:90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin:20px auto;
+}
+
+.containerpt h88{
+    font-size: 50px;
+    color: black;
+    margin-bottom: 25px;
+    position: relative;
+}
 
 .wrapper4{
     position: absolute;
-    top: 50%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 900px;
